--- a/scripts/xrun_lyt.conf
+++ b/scripts/xrun_lyt.conf
@@ -2,10 +2,10 @@ ${lyt}/${design}/${design}_lyt.v
 ${tests}/${design}_tb.sv
 
 # Libraries
-/home/tools/design_kits/cadence/GPDK045/gsclib045_all_v4.4/gsclib045/verilog/slow_vdd1v0_basicCells.v 
+-v /home/tools/design_kits/cadence/GPDK045/gsclib045_all_v4.4/gsclib045/verilog/slow_vdd1v0_basicCells.v 
 
 # Xrun Options
--gui
+# -gui
 -access +rw
 -log ${logs}/xrun.log
 -nohistory
