--- a/scripts/xrun_lyt.conf
+++ b/scripts/xrun_lyt.conf
@@ -5,7 +5,7 @@ ${tests}/${design}_tb.sv
 -v /home/tools/design_kits/cadence/GPDK045/gsclib045_all_v4.4/gsclib045/verilog/slow_vdd1v0_basicCells.v 
 
 # Xrun Options
-# -gui
+-gui
 -access +rw
 -log ${logs}/xrun.log
 -nohistory
@@ -14,3 +14,4 @@ ${tests}/${design}_tb.sv
 -top ${design}_tb
 -timescale 1ns/10ps
 -sdf_cmd_file ${scr}/cmd/sdf_lyt.cmd
+-sdf_no_warnings
